--- a/QualityApps/QualityApps/Form/FormActivityMaster.resx
+++ b/QualityApps/QualityApps/Form/FormActivityMaster.resx
@@ -205,4 +205,7 @@
   <metadata name="cbTeam.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="cbCategory.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
